--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 <title>Anti-Code | Laugh Live Code</title>
+
+
+<!--========================*\
+ oh rly?	ya rly!  
+   \ ___,    ___ /   _,_  no rly?
+    {O,0}   {-.-}   {o,O} /
+    |)__)   |)~(|   (~~(|
+-----"-"-----"-"-----"-"-----,_
+=========================== -->
+
+
 <meta name="description" content="">
 <meta name="author" content="Jared Williams">
 
@@ -40,7 +51,7 @@
 			<li><a href="#panel7">Seven</a></li>
 			<li><a href="#panel8">Eight</a></li>
 			<li><a href="#panel9">Nine</a></li>
-			<li><a href="#ten">Ten</a></li>
+			<li><a href="#panel10">Ten</a></li>
 		</ul>
 	</nav>
 
@@ -55,6 +66,12 @@
 	<img src="imgs/cloud-small.png" alt="cloud" id="scloud4" />
 	<img src="imgs/cloud-small.png" alt="cloud" id="scloud5" />
 	<img src="imgs/cloud-small.png" alt="cloud" id="scloud6" />
+	<img src="imgs/cloud-small.png" alt="cloud" id="scloud7" />
+	<img src="imgs/cloud-small.png" alt="cloud" id="scloud8" />
+	<img src="imgs/cloud-small.png" alt="cloud" id="scloud9" />
+	<img src="imgs/cloud-small.png" alt="cloud" id="scloud10" />
+	<img src="imgs/cloud-small.png" alt="cloud" id="scloud11" />
+	<img src="imgs/cloud-small.png" alt="cloud" id="scloud12" />
 </section>
 
 <section id="layer5" class="wave-5 waves layer"></section>
@@ -66,6 +83,9 @@
 	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud4" />
 	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud5" />
 	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud6" />
+	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud7" />
+	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud8" />
+	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud9" />
 </section>
 
 <section id="layer4" class="wave-4 layer"></section>
