added a background image for measuring the grid out like a boss

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 <section id="layer4" class="wave-4 layer"></section>
 
 <section id="layer3" class="content layer">
-	
+	<img src="imgs/grid-ruler.png" alt="ruler" id="ruler" />
+
 	<section id="panel1" class="panel">
   		<!-- Panel 1 Content -->
   		<h1>Panel 1</h1>
