updated clouds bg images so, parallax needs to slow the ef down and move to the negative x,y for default state panel as initial state

--- a/index.html
+++ b/index.html
@@ -59,34 +59,7 @@
 
 
 
-<section id="sm-clouds" class="clouds layer">
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud1" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud2" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud3" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud4" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud5" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud6" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud7" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud8" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud9" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud10" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud11" />
-	<img src="imgs/cloud-small.png" alt="cloud" id="scloud12" />
-</section>
-
 <section id="layer5" class="wave-5 waves layer"></section>
-
-<section id="med-clouds" class="clouds layer">
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud1" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud2" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud3" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud4" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud5" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud6" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud7" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud8" />
-	<img src="imgs/cloud-med.png" alt="cloud" id="mcloud9" />
-</section>
 
 <section id="layer4" class="wave-4 layer"></section>
 
@@ -215,16 +188,11 @@
 
 </section>
 
-<section id="big-clouds" class="clouds layer">
-	<img src="imgs/cloud-big.png" alt="cloud" id="bcloud1" />
-	<img src="imgs/cloud-big.png" alt="cloud" id="bcloud2" />
-	<img src="imgs/cloud-big.png" alt="cloud" id="bcloud3" />
-	<img src="imgs/cloud-big.png" alt="cloud" id="bcloud4" />
-	<img src="imgs/cloud-big.png" alt="cloud" id="bcloud5" />
-	<img src="imgs/cloud-big.png" alt="cloud" id="bcloud6" />
-</section>
-
 <section id="layer1" class="wave-1 waves layer"></section>
+
+<section id="sm-clouds" class="clouds layer"></section>
+<section id="med-clouds" class="clouds layer"></section>
+<section id="big-clouds" class="clouds layer"></section>
 
 
 <footer>
