--- a/panels/panel5/index.html
+++ b/panels/panel5/index.html
@@ -1,4 +1,4 @@
-<article id="samsung" class="info panel5">
+<article id="samsung" class="info">
 	<div class="gallery">
 		<ul class="slider">
 			<li><img src="panels/samsung/slide-1.jpg" alt=""></li>
