--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 
 
-<canvas id="layer5" class="waves layer"></canvas>
-<canvas id="layer4" class="waves layer"></canvas>
+<section id="layer5" class="waves layer"></section>
+<section id="layer4" class="waves layer"></section>
 <section id="layer3" class="content layer">
 	<!-- <img src="imgs/grid-ruler.png" alt="ruler" id="ruler" /> -->
 
@@ -186,10 +186,11 @@
 
 </section>
 
-<canvas id="sm-clouds" class="clouds layer"></canvas>
-<canvas id="layer1" class="waves layer"></canvas>
-<canvas id="big-clouds" class="clouds layer"></canvas>
+<section id="layer1" class="waves layer"></section>
+<!-- <canvas id="sm-clouds" class="clouds layer"></canvas>
 <canvas id="med-clouds" class="clouds layer"></canvas>
+ -->
+ <canvas id="big-clouds" resize class="clouds layer"></canvas>
 
 
 <footer>
@@ -202,11 +203,12 @@
 
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.22/paper.js" type="text/javascript"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/panelNavigation.js"></script>
+<script type="text/paperscript" src="js/canvasLayers.js" canvas="big-clouds"></script>
 
 
 <script>
