--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 =========================== -->
 
 
-<meta name="description" content="">
+<meta name="description" content="Personal portfolio of awesome interactive frontend hottness for Jared Williams (@jaredwilli)">
 <meta name="author" content="Jared Williams">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
 <link rel="stylesheet" href="css/anythingslider.css">
 <link rel="stylesheet" href="css/style.css">
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.1/modernizr.min.js"></script>
+<script defer src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.1/modernizr.min.js"></script>
 
 </head>
 <body>
@@ -202,13 +202,13 @@
 
 
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.22/paper.js" type="text/javascript"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
-<script src="js/panelNavigation.js"></script>
-<script type="text/paperscript" src="js/canvasLayers.js" canvas="big-clouds"></script>
+<script defer src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script defer src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.22/paper.js" type="text/javascript"></script>
+<script defer src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script defer src="js/plugins.js"></script>
+<script defer type="text/paperscript" src="js/canvasLayers.js" canvas="big-clouds"></script>
+<script defer src="js/main.js"></script>
+<script defer src="js/panelNavigation.js"></script>
 
 
 <script>
