--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 <title>Anti-Code | Laugh Live Code</title>
@@ -19,19 +19,19 @@
 =========================== -->
 
 
-<meta name="description" content="">
-<meta name="author" content="Jared Williams">
+<meta name="description" content="The personal portfolio of Jared Williams (@jaredwilli) of intereactive awesomeness that provides a little sample of work done less recently.">
+<meta name="author" content="Jared Williams (@jaredwilli)">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-<link rel="stylesheet" href="css/anythingslider.css">
 <link rel="stylesheet" href="css/style.css">
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.1/modernizr.min.js"></script>
-
+<!-- Include jQuery here so is loaded when panels with js included dependant on jQuery to work -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 </head>
 <body>
 
@@ -41,6 +41,7 @@
 	</h1>
 
 	<nav id="main-nav">
+		<h4>Examples:</h4>
 		<ul>
 			<li><a href="#panel1">One</a></li>
 			<li><a href="#panel2">Two</a></li>
@@ -56,8 +57,6 @@
 	</nav>
 
 </header>
-
-
 
 <section id="layer5" class="waves layer"></section>
 <section id="layer4" class="waves layer"></section>
@@ -189,24 +188,21 @@
 <section id="layer1" class="waves layer"></section>
 <!-- <section id="sm-clouds" class="clouds layer"></section>
 <section id="med-clouds" class="clouds layer"></section> -->
-<canvas id="big-clouds" class="clouds layer"></canvas>
-
+<canvas id="big-clouds" class="clouds"></canvas>
 
 <footer>
 	<span class="copyright">
-		<p>Copyright &copy;2012 <a href="/">Anti-Code.com</a> | All Rights Reserved.</p>
+		<p>Copyright &copy;2012 <a href="index.html">Anti-Code.com</a> | All Rights Reserved.</p>
 		<p>Made by <a href="http://twitter.com/jaredwilli">Jared Williams</a></p>
 	</span>
 </footer>
 
 
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/paper.js/0.22/paper.js"></script>
+<script src="js/libs/raphael.2.1.0.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
-<script type="text/paperscript" src="js/canvasLayers.js" canvas="big-clouds"></script>
 
 
 <script>
