panels loading and custom gallery for each panel with thumbnails made, also the asteroids game code in place not work tho

--- a/panels/panel1/index.html
+++ b/panels/panel1/index.html
@@ -1,19 +1,43 @@
 <article class="info">
-	<div class="gallery">
-		<ul id="cssoff2011" class="slider">
-			<li><img src="panels/panel1/slide-1.jpg" alt=""></li>
-			<li><img src="panels/panel1/slide-2.jpg" alt=""></li>
-			<li><img src="panels/panel1/slide-3.jpg" alt=""></li>
-			<li><img src="panels/panel1/slide-4.jpg" alt=""></li>
-			<li><img src="panels/panel1/slide-5.jpg" alt=""></li>
+	<section id="cssoff2011" class="project-content">
+		<h2>
+			<a href="http://anti-code.com/examples/cssoff11/" target="_blank">2011 CSS Off Entry</a> |
+			<a href="http://anti-code.com/examples/cssoff11/" target="_blank">Original Design</a>
+		</h2>
+
+		<ul class="gallery-thumbs">
+			<li>
+				<p>I made this site as my entry for the CSS Off contest in 2011 from the mockup that was provided for coding out. The design presented several various complex obstacles that had to be overcome. For the top of the site I made use of CSS3 multiple background images, and @font-face for customizing the fonts. Also, some minor CSS transforms for text rotating.</p>
+				<a href="#slide-1">
+					<img src="panels/panel1/thumb-1.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>The second page was tricky to figure out the best way to show the obstacles using CSS hover states. Minimizing the amount of data the page had to load with all the images for thumbnails and fullsize was a matter of testing what was better done as a sprite. Also, making the text for each obstacle not part of the image involved CSS3 transforms and positioning of the backgrounds. The differing heights of the obstacles caused some issues too.</p>
+				<a href="#slide-2">
+					<img src="panels/panel1/thumb-2.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>The prizes page was not as simple as it looks because the way the images needed to be floated did not make them wrap to a new line given the order and height difference. Each page has a yellow checkered heading that starts after the text. I managed to find a way to make each heading appear the way they needed to to the checkered square!</p>
+				<a href="#slide-3">
+					<img src="panels/panel1/thumb-3.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>The register page had it's own custom styled select menus and a countdown timer that I made function and countdown from 60 seconds from the time the page loaded. I made my own select menus from the data of a regular one that I used as a fallback.</p>
+				<a href="#slide-4">
+					<img src="panels/panel1/thumb-4.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>In the footer the left and right side needed to line in with the text center aligned mirroring and a horizontal rule that was separated by some text. I also included an easter egg in this page, see what happens when you type the word 'plaid'.</p>
+				<a href="#slide-5">
+					<img src="panels/panel1/thumb-5.png" alt="">
+				</a>
+			</li>
 		</ul>
-	</div>
-
-	<section class="project-content">
-		<h2>2011 CSS Off Contest</h2>
-
-		<p>This is the site I built for the CSS Off contest for 2011 which I submitted as my entry. This design was a mockup that was provided for the contest. The person who created the best resulting code for this single-page site was the winner. The design presented several various complex obstacles that had to be overcome. In my entry I made use of CSS3 features such as multiple background images, @font-face, transforms and more. The layout of each page had some challenging requirements.</p>
-
-		<a href="http://anti-code.com/examples/cssoff11/" target="_blank">2011 CSS Off Site Entry</a>
+		
+		<div class="gallery"></div>
 	</secton>
 </article>
