--- a/panels/panel10/index.html
+++ b/panels/panel10/index.html
@@ -1,16 +1,24 @@
 <article class="info">
-	<div class="gallery">
-		<ul id="retirelife" class="slider">
-			<li><img src="panels/panel10/slide-1.jpg" alt=""></li>
-			<li><img src="panels/panel10/slide-2.jpg" alt=""></li>
+	<section id="retirelife" class="project-content">
+		<h2>
+			<a href="http://www.retirelife.net/blog" target="_blank">Retire Life Blog</a>
+		</h2>
+		
+		<ul class="gallery-thumbs">
+			<li>
+				<p>This is a WordPress 3.0 custom built theme for a blog that made use of the new custom post type feature which was added in WordPress 3.0, before WordPress 3.0 was even released yet.</p>
+				<a href="#slide-1">
+					<img src="panels/panel10/thumb-1.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>The design included a mega dropdown menu which was for displaying the custom taxonomies that were tied together with the custom post type for the blog.</p>
+				<a href="#slide-2">
+					<img src="panels/panel10/thumb-2.png" alt="">
+				</a>
+			</li>
 		</ul>
-	</div>
-
-	<section class="project-content">
-		<h2>Retire-Life Blog</h2>
-
-		<p>This is a WordPress 3.0 custom built theme for a blog that made use of the new custom post type feature which was added in WordPress 3.0, before WordPress 3.0 was even released yet.</p>
-
-		<a href="http://www.retirelife.net/blog" target="_blank">Retire Life Blog</a>
+	
+		<div class="gallery"></div>
 	</secton>
 </article>
