--- a/panels/panel2/index.html
+++ b/panels/panel2/index.html
@@ -1,3 +1,5 @@
+<h2>HTML5 Canvas Game</h2>
+
 <div id="game">
 	<div id="game-ui">
 		<div id="game-intro">
@@ -17,8 +19,13 @@
 		</div>
 	</div>
 	<canvas id="can" width="350" height="600"><a href="http://i.imgur.com/1XrPp.jpg">Your browser doesnt support canvas.</a></canvas>
-
 </div>
+
+<footer id="stargame">
+	<p>Use the orange ball to knock the flickering stars out of the circle by clicking on it and dragging your mouse downward using the line to aim the ball. Try to get all the balls out.</p>
+
+	<p><a href="http://anti-code.com/examples/starshooter/" target="_blank">View original example in new tab...</a></p>
+</footer>
 
 <link href="panels/panel2/assets/game.css" rel="stylesheet" type="text/css" />
 <script src="panels/panel2/assets//starshooter.js" type="text/javascript"></script>
