--- a/panels/panel3/index.html
+++ b/panels/panel3/index.html
@@ -10,7 +10,9 @@
 			<li>This is a completely client-side example. No server-side code is used to store the new photo order.</li>
 			<li>While this example is using jQuery to do simple class adding and removing, the use of 3rd party libraries is not entirely needed. I made all the event handlers and DOM manipulations using straight conventional JavaScript.</li>
 			<li>This is example is functional in the browsers: Safari, Chrome, Firefox, and Internet Explorer 8 and 9.</li>
-		</ul>			
+		</ul>
+
+		<p><a href="http://anti-code.com/examples/dragndrop/" target="_blank">View original example in new tab...</a></p>
 	</section>
 
 	<section id="thumbs">
