--- a/panels/panel4/index.html
+++ b/panels/panel4/index.html
@@ -1,27 +1,38 @@
-<link rel="stylesheet" type="text/css" href="panels/panel4/style.css">
-<script src="panels/panel4/script.js"></script>
+<article class="info">
+	<section id="samsung" class="project-content">
+		<h2>
+			<a href="#" target="_blank">Samsung Olympic Genome Project</a>
+		</h2>
 
-<div id="game">
-	<h1>Rock Paper Scissors</h1>
-    <h3>Choose One</h3>
+		<ul class="gallery-thumbs">
+			<li>
+				<p>The Olympic Genome Project was a complex Facebook data visualization app and interactive gaming experience built with Canvas and HTML5 to display information within a single animated page the different ways which consumers are connected to Olympic athletes.</p>
+				<a href="#slide-1">
+					<img src="panels/panel4/thumb-1.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>I worked on this project for about 8 months when I was at Isobar and lead the development of the front-end for about 6 of those months after inheriting the lead role. A community within a social network to incorporate the social graph and users profile data to find matching data from USOC to create different degrees of separation.</p>
+				<a href="#slide-2" data-vid="http://www.youtube.com/embed/xqjVE_cOlgA">
+					<img src="panels/panel4/thumb-2.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>The second page was tricky to figure out the best way to show the obstacles using CSS hover states. Minimizing the amount of data the page had to load with all the images for thumbnails and fullsize was a matter of testing what was better done as a sprite. Also, making the text for each obstacle not part of the image involved CSS3 transforms and positioning of the backgrounds. The differing heights of the obstacles caused some issues too.</p>
+				<a href="#slide-3" data-vid="http://www.facebook.com/v/10100307750402631">
+					<img src="panels/panel4/thumb-3.png" alt="">
+				</a>
+			</li>
+		</ul>
 
-    <ul>
-        <li><a id="Rock" href="#">Rock</a></li>
-        <li><a id="Paper" href="#">Paper</a></li>
-        <li><a id="Scissors" href="#">Scissors</a></li>
-    </ul>
-    
-    <div id="results">
-        <div id="player"></div>
-        <div id="winner"></div>
-        <div id="computer"></div>
-    </div>
+		<div class="gallery">
+			<object width="680" height="400">
+				<param name="allowfullscreen" value="true"></param>
+				<param name="movie" value=""></param>
+				<embed src="" type="application/x-shockwave-flash" allowfullscreen="1" width="680" height="400"></embed>
+			</object>
 
-	<p>
-		I was asked by someone how I would psuedo-code a Rock Paper Scissors game in JavaScript. I thought it would be more fun to just try and make the game myself and decided to try. It was a quick and dirty hack that took me about 2 hours to come up with a functional basic example of a working game.
-	</p>
-	<p>
-		My main goal was to make a basic working example of this childhood classic game while using the least amount of code. As if it were for a JS1k.com contest for example only not minified to be under 1k yet.
-	</p>
-
-</div>
+			<iframe width="680" height="400" src="" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</secton>
+</article>
