--- a/panels/panel9/index.html
+++ b/panels/panel9/index.html
@@ -1,18 +1,24 @@
 <article class="info">
-	<div class="gallery">
-		<ul id="jbl" class="slider">
-			<li><img src="panels/panel9/slide-1.jpg" alt=""></li>
-			<li><img src="panels/panel9/slide-2.jpg" alt=""></li>
+	<section id="jbl" class="project-content">
+		<h2>
+			<a href="http://www.jbl.com/estore/jbl/us/shop/Speakers/cat10009#category-productrecommender" target="_blank">JBL Product Recommender</a>
+		</h2>
+
+		<ul class="gallery-thumbs">
+			<li>
+				<p>This is the new category page I built for the redesign of JBL.com. In this page along with the custom image slider is a sort of search wizard that was for finding products based on specific criteria. All dynamically updated with sliding hidden content areas and front-end goodies.</p>
+				<a href="#slide-1">
+					<img src="panels/panel9/thumb-1.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>The product recommender included things on the front-end like a price range slider, and horizontal sliding product pagination. Also, automatic reloading of the product list as each of the options are changed.</p>
+				<a href="#slide-2">
+					<img src="panels/panel9/thumb-2.png" alt="">
+				</a>
+			</li>
 		</ul>
-	</div>
-
-	<section class="project-content">
-		<h2>JBL.com Product Recommender</h2>
-
-		<p>
-			This is a feature I built for <a href="">JBL.com</a> that was a type of search wizard for finding products based on specific criteria. It includes a price range slider, sliding product paging, and automatic reloading of the product list as each of the options are changed.
-		</p>
-
-		<a href="http://www.jbl.com/estore/jbl/us/shop/Speakers/cat10009#category-productrecommender" target="_blank">View the JBL Product Recommender</a>
+	
+		<div class="gallery"></div>
 	</secton>
 </article>
