--- a/panels/panel8/index.html
+++ b/panels/panel8/index.html
@@ -1,22 +1,30 @@
 <article class="info">
-	<div class="gallery">
-		<ul id="new2wp" class="slider">
-			<li><img src="panels/new2wp/slide-1.jpg" alt=""></li>
-			<li><img src="panels/new2wp/slide-2.jpg" alt=""></li>
-			<li><img src="panels/new2wp/slide-3.jpg" alt=""></li>
+	<section id="new2wp" class="project-content">
+		<h2>
+			<a href="http://new2wp.com" target="_blank">www.New2WP.com - Tutorials, Resources, and More!!</a>
+		</h2>
+
+		<ul class="gallery-thumbs">
+			<li>
+				<p>One of my personal sites where I not only designed and developed everything, but also wrote 99% of the content too. There are some very in-depth tutorials and resourceful articles for people who are learning WordPress and JavaScript. It receives a large number of visitors too.</p>
+				<a href="#slide-1">
+					<img src="panels/panel8/thumb-1.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>There are tutorials that show how to create custom post types, and even customize the design of the WordPress Dashboard to match your theme.</p>
+				<a href="#slide-2">
+					<img src="panels/panel8/thumb-2.png" alt="">
+				</a>
+			</li>
+			<li>
+				<p>I added a custom post type for posting new code snippets so I could easily share a quick post with some useful code that I wrote.</p>
+				<a href="#slide-3">
+					<img src="panels/panel8/thumb-3.png" alt="">
+				</a>
+			</li>
 		</ul>
-	</div>
-
-	<section class="project-content">
-		<h2>New2WP - Personal Blog of Tutorials and Code Snippets</h2>
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-		</p>
-		<p>
-			Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-
-		<a href="http://new2wp.com" target="_blank">www.New2WP.com</a>
+		
+		<div class="gallery"></div>
 	</secton>
 </article>
