--- a/panels/panel4/index.html
+++ b/panels/panel4/index.html
@@ -26,13 +26,13 @@
 		</ul>
 
 		<div class="gallery">
-			<object width="680" height="400">
+			<!-- <object width="680" height="400">
 				<param name="allowfullscreen" value="true"></param>
 				<param name="movie" value=""></param>
 				<embed src="" type="application/x-shockwave-flash" allowfullscreen="1" width="680" height="400"></embed>
 			</object>
 
-			<iframe width="680" height="400" src="" frameborder="0" allowfullscreen></iframe>
+			<iframe width="680" height="400" src="" frameborder="0" allowfullscreen></iframe> -->
 		</div>
 	</secton>
 </article>
