--- a/panels/panel5/index.html
+++ b/panels/panel5/index.html
@@ -18,7 +18,7 @@
 			<li class="panel5">
 				<h1>Front-end Development</h1>
 				<h2>Portfolio</h2>
-				<span>of</span>
+				<div>of</div>
 				<h3>Jared Williams</h3>
 				<a href="resume.html">
 					<span>Check Out My Resume</span>
