--- a/index.html
+++ b/index.html
@@ -87,7 +87,56 @@
 
 	<section id="panel5" class="col1 row1 panel">
 		<!-- Panel 5 Content -->
-		<h1>Panel 5</h1>
+		<div class="panel-wrap">
+			<article class="grid-menu">
+				<nav id="default-nav">
+					<ul>
+						<li class="panel1">
+							<a href="#panel1"><span>CSS Off 2011 Entry</span></a>
+						</li>
+						<li class="panel2">
+							<a href="#panel2"><span>StarShooters Canvas Game</span></a>
+						</li>
+						<li class="panel3">
+							<a href="#panel3"><span>HTML5 Drag'n Drop</span></a>
+						</li>
+						<li class="panel4">
+							<a href="#panel4"><span>Samsung Olympic Genome Project</span></a>
+						</li>
+						<li class="panel5">
+							<h1>Front-end Development</h1>
+							<h2>Portfolio</h2>
+							<span>of</span>
+							<h3>Jared Williams</h3>
+							<a href="resume.html">
+								<span>Check Out My Resume</span>
+							</a>
+						</li>
+						<li class="panel6">
+							<a href="#panel6"><span>2010 WordPress Honors</span></a>
+						</li>
+						<li class="panel7">
+							<a href="#panel7"><span>Rock Paper Scissors</span></a>
+						</li>
+						<li class="panel8">
+							<a href="#panel8"><span>New2WP.com</span></a>
+						</li>
+						<li class="panel9">
+							<a href="#panel9"><span>JBL.com Recommender</span></a>
+						</li>
+						<li class="panel10">
+							<a href="#panel10"><span>Retire Life</span></a>
+						</li>
+						<li class="panel11">
+							<a href="#panel11"><span>The Port Candle</span></a>
+						</li>
+						<li class="panel12">
+							<a href="#panel12"><span></span></a>
+						</li>
+					</ul>
+				</nav>
+			</article>
+		</div>
 	</section>
 
 	<section id="panel6" class="col2 row1 panel">
@@ -141,8 +190,15 @@
 	<span class="copyright">
 		<p>Copyright &copy;2012 <a href="index.html">Anti-Code.com</a> | All Rights Reserved.</p>
 		<p>Made by <a href="http://twitter.com/jaredwilli">Jared Williams</a></p>
+
+		<a href="https://twitter.com/share" class="twitter-share-button" data-via="anticode" data-related="jaredwilli">Tweet</a>
+
+		<div class="fb-like" data-href="http://anti-code.com" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+
 	</span>
 </footer>
+
+<div id="fb-root"></div>
 
 <!-- The missing protocol means that it will match the current protocol, either http or https. If running locally, we use the local jQuery. -->
 <script defer src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -151,6 +207,11 @@
 <script src="js/main.js"></script>
 <!-- <script src="js/canvasLayers.js"></script> -->
 <script defer src="js/game.asteroids.js"></script>
+
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+<script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=121556164664182"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
 
 <script>
 var _gaq=[['_setAccount','UA-22924724-1'],['_trackPageview']];
