fixed rockpaperscissors to work in panel, panel image galleries now support video embeds, style fixes

--- a/panels/panel4/index.html
+++ b/panels/panel4/index.html
@@ -4,35 +4,29 @@
 			<a href="#" target="_blank">Samsung Olympic Genome Project</a>
 		</h2>
 
+		<p>The Olympic Genome Project was a complex Facebook data visualization app and interactive gaming experience built with Canvas and HTML5 to display information within a single animated page the different ways which consumers are connected to Olympic athletes.</p>
+
 		<ul class="gallery-thumbs">
 			<li>
-				<p>The Olympic Genome Project was a complex Facebook data visualization app and interactive gaming experience built with Canvas and HTML5 to display information within a single animated page the different ways which consumers are connected to Olympic athletes.</p>
-				<a href="#slide-1">
+				<p>The app is no longer online which means there is no existing example of how it worked and functioned unfortunately. That being the case, I uploaded a short video I made back in the early stages of development which helps provide somewhat of an idea for how the app worked and animated. Most of the content you see within the different panels is static, or non-existent even, but the general idea and navigation should be enough to give an idea for how it worked.</p>
+				<a href="#slide-1" data-vid="http://www.youtube.com/embed/xqjVE_cOlgA">
 					<img src="panels/panel4/thumb-1.png" alt="">
 				</a>
 			</li>
 			<li>
 				<p>I worked on this project for about 8 months when I was at Isobar and lead the development of the front-end for about 6 of those months after inheriting the lead role. A community within a social network to incorporate the social graph and users profile data to find matching data from USOC to create different degrees of separation.</p>
-				<a href="#slide-2" data-vid="http://www.youtube.com/embed/xqjVE_cOlgA">
+				<a href="#slide-2">
 					<img src="panels/panel4/thumb-2.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>The second page was tricky to figure out the best way to show the obstacles using CSS hover states. Minimizing the amount of data the page had to load with all the images for thumbnails and fullsize was a matter of testing what was better done as a sprite. Also, making the text for each obstacle not part of the image involved CSS3 transforms and positioning of the backgrounds. The differing heights of the obstacles caused some issues too.</p>
+				<p>Every single piece of this application was an obstacle that needed to be overcome somehow. Having to figure out ways to make something work the way it needed to was only the beginning. Once that was done, it was then a matter of finding a way to make it work for all of the browsers and devices that the app was required to support. This included browsers on tablet devices, and computer browsers, from Internet Explorer 8 which does not have support for Canvas, to all modern browsers and versions of each Firefox, Chrome, Opera and Safari as well as the default browser that Andriod used prior to Ice Cream Sandwich. It was difficult to make the Canvas graph animation function on tablet devices, and even harder to improve the speed and performance for such devices which had yet to really even support such new technologies as Canvas. Luckily, I was successful in finding a way to make it perform well and the same across both tablets and computers.</p>
 				<a href="#slide-3" data-vid="http://www.facebook.com/v/10100307750402631">
 					<img src="panels/panel4/thumb-3.png" alt="">
 				</a>
 			</li>
 		</ul>
 
-		<div class="gallery">
-			<!-- <object width="680" height="400">
-				<param name="allowfullscreen" value="true"></param>
-				<param name="movie" value=""></param>
-				<embed src="" type="application/x-shockwave-flash" allowfullscreen="1" width="680" height="400"></embed>
-			</object>
-
-			<iframe width="680" height="400" src="" frameborder="0" allowfullscreen></iframe> -->
-		</div>
+		<div class="gallery"></div>
 	</secton>
 </article>
