--- a/panels/panel7/index.html
+++ b/panels/panel7/index.html
@@ -1,10 +1,11 @@
 <link rel="stylesheet" type="text/css" href="panels/panel7/style.css">
+<script src="panels/panel7/script.js"></script>
 
 <div id="game">
     <h1>Rock Paper Scissors</h1>
     <h3>Choose One</h3>
 
-    <ul>
+    <ul id="options">
         <li><a id="Rock" href="#">Rock</a></li>
         <li><a id="Paper" href="#">Paper</a></li>
         <li><a id="Scissors" href="#">Scissors</a></li>
@@ -25,5 +26,3 @@
 
     <p><a href="http://anti-code.com/examples/rockpaperscissors/" target="_blank">View original example in new tab...</a></p>
 </div>
-
-<script src="panels/panel7/script.js"></script>
