resizing in IE9 works. all panels work. all things work except bgGame

--- a/panels/panel1/index.html
+++ b/panels/panel1/index.html
@@ -1,13 +1,14 @@
 <article class="info">
 	<section id="cssoff2011" class="project-content">
-		<h2>
-			<a href="http://anti-code.com/examples/cssoff11/" target="_blank">2011 CSS Off Entry</a> |
-			<a href="http://anti-code.com/examples/cssoff11/" target="_blank">Original Design</a>
-		</h2>
+		<h2>2011 CSS Off Entry</h2>
+
+		<a href="/examples/cssoff11/" target="_blank" class="project-link">View Site</a>
+		
+		<p>I made this site as my entry for the CSS Off contest in 2011 from the <a href="/examples/cssoff11/design/CSSOff-2011-Design.jpg" target="_blank" class="mockup">mockup that was provided</a> for coding this out. The design presented several various complex obstacles that had to be overcome and the goal was to create the best possible code for the site as possible based on a number of criteria that would be judged upon.</p>
 
 		<ul class="gallery-thumbs">
 			<li>
-				<p>I made this site as my entry for the CSS Off contest in 2011 from the mockup that was provided for coding out. The design presented several various complex obstacles that had to be overcome. For the top of the site I made use of CSS3 multiple background images, and @font-face for customizing the fonts. Also, some minor CSS transforms for text rotating.</p>
+				<p>For the top of the site I made use of CSS3 multiple background images, and @font-face for customizing the fonts. Also, some minor CSS transforms for text rotating.</p>
 				<a href="#slide-1">
 					<img src="panels/panel1/thumb-1.png" alt="">
 				</a>
