--- a/panels/panel4/index.html
+++ b/panels/panel4/index.html
@@ -1,8 +1,6 @@
 <article class="info">
 	<section id="samsung" class="project-content">
-		<h2>
-			<a href="#" target="_blank">Samsung Olympic Genome Project</a>
-		</h2>
+		<h2>Samsung Olympic Genome Project</h2>
 
 		<p>The Olympic Genome Project was a complex Facebook data visualization app and interactive gaming experience built with Canvas and HTML5 to display information within a single animated page the different ways which consumers are connected to Olympic athletes.</p>
 
