--- a/panels/panel6/index.html
+++ b/panels/panel6/index.html
@@ -1,36 +1,48 @@
 <article class="info">
 	<section id="wphonors" class="project-content">
-		<h2>
-			<a href="http://2010.wphonors.com" target="_blank">2010 WordPress Honor Awards</a>
-		</h2>		
+		<h2>2010 WordPress Honor Awards</h2>
+
+		<a href="http://2010.wphonors.com" target="_blank" class="project-link">View Site</a>
+		
+		<p>This site was the first major site released that was built using the new features added to WordPress 3.0 with all sorts of custom post types and cool features that were totally orignal. It gained more than by more than 5,000 members in the first month after it launched and it generated a lot of buzz within the WordPress community.</p>
 
 		<ul class="gallery-thumbs">
 			<li>
-				<p>This site was the first major site released that was built using the new features added to WordPress 3.0 with all sorts of custom post types and cool features that were totally orignal. It gained more than by more than 5,000 members in the first month after it launched and it generated a lot of buzz within the WordPress community.</p>
+				<p>Everything that could be made to use Ajax did, like the voting button that enabled users to vote on entries of each category, and a lightbox that users could login/register from on any page, and when logged in the lightbox allowed them to post any of the 4 types of content they wanted without ever leaving that page.</p>
+
+				<p>Every custom page template that was made for each of the post types had unique features. The homepage of the site itself had it's own type of dynamic display and manipulation of the WP loop, and some of the things that were done would not be thought as possible within the scope of WordPress.</p>
 				<a href="#slide-1">
 					<img src="panels/panel6/thumb-1.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>The amount of user-generated content was huge and the number of prizes and free stuff generously donated by the 23 sponsors of the contest the site was based around was so large that 3 randomly chosen winning members of the site every single day for 3 months until the end of the year when the contest was over.</p>
+				<p>The custom features for the dashboard and the user-facing side of the site were extensive. Consisting of everything from cool interactive front-end things to complete augmentation of the way that WordPress itself is built and normally functions.</p>
+
+				<p>For making the custom post types, I created a reusable PHP class that made it super simple to create a new regular post type. It was a matter of writing a single line of code. From there it was just a matter of creating a child class containing the code for controlling and creating the metaboxes of the post type as well as the way content for it would be displayed on the page templates. It was very helpful and would eventually become a plugin for simple custom post type creation and control.</p>
 				<a href="#slide-2">
 					<img src="panels/panel6/thumb-2.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>The custom features for the dashboard and the user-facing side of the site were extensive. Consisting of everything from cool interactive front-end things to complete augmentation of the way that WordPress itself is built and normally functions.</p>
+				<p>The amount of user-generated content was huge and the number of prizes and free stuff generously donated by the 23 sponsors of the contest the site was based around was so large that 3 randomly chosen winning members of the site every single day for 3 months until the end of the year when the contest was over.</p>
 				<a href="#slide-3">
 					<img src="panels/panel6/thumb-3.png" alt="">
 				</a>
 			</li>
 			<li>
-				<p>Everything that could be made to use Ajax did, like the voting button that enabled users to vote on entries of each category, and a lightbox that users could login/register from on any page, and when logged in the lightbox allowed them to post any of the 4 types of content they wanted without ever leaving that page.</p>
+				<p>I made a custom 404 error page for this site which had Kanye West with his "Imma let you finish..." famous award ceremony moment and at the time a very popular internet meme for some added humor to the site.</p>
+
+				<p>Anywhere that something needed a little extra flair I made sure to add it in. It was my priority to ensure that everything about this site needed to make it memorable. My goal was to make the biggest impact on the WordPress world as I could to make my mark in it's history.</p>
 				<a href="#slide-4">
 					<img src="panels/panel6/thumb-4.png" alt="">
 				</a>
 			</li>
 			<li>
 				<p>The dashboard had several features that were for all levels of access from regular members to editors, judges and admins. There was a prize inventory section just for keeping track of who won what and how many prizes were left from each sponsor. There was a custom post type for the judges that was made up of all the finalists from the user votes. Dashboard widgets that tracked the number of votes each submission had for each category and so many more things to list off.</p>
+				
+				<p>The users list section of the dashboard was manipulated so that it would include a column for showing each members posts for each post type that linked to the list of their posts for that type. It was a complete manipulation of something which WordPress did not make easily doable making it very difficult to find a way to override when it came to be a feature that I felt would be useful to have.</p>
+
+				<p>The list of things that were done for customizing the dashboard for this site were really extensive and could go on and on. To see more <a href="http://2010.wphonors.com" target="_blank">check out the site</a> and create an account to view it once logged in.</p>
 				<a href="#slide-5">
 					<img src="panels/panel6/thumb-5.png" alt="">
 				</a>
