--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
 <script defer src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <!-- <script src="js/canvasLayers.js"></script> -->
-<script defer src="js/game.asteroids.js"></script>
+<!-- <script defer src="js/game.asteroids.js"></script> -->
 
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-<script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=121556164664182"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
+<script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=121556164664182";fjs.parentNode.insertBefore(js,fjs);}(document,'script','facebook-jssdk'));</script>
 
 <script>
 var _gaq=[['_setAccount','UA-22924724-1'],['_trackPageview']];
